--- a/composer.json
+++ b/composer.json
@@ -1,31 +1,39 @@
 {
-    "name": "divineomega/laravel-offensive-validation-rule",
-    "description": "Laravel validation rule that checks if a string is offensive.",
-    "type": "library",
-    "require": {
-        "laravel/framework": "^5.5||^6.0||^7.0",
-        "divineomega/is_offensive": "^1.4.0"
-    },
-    "require-dev": {
-        "orchestra/testbench": "^3.5",
-        "phpunit/phpunit": "^6.0",
-        "satooshi/php-coveralls": "^2.0"
-    },
-    "license": "LGPL-3.0-only",
-    "authors": [
-        {
-            "name": "Jordan Hall",
-            "email": "jordan@hall05.co.uk"
-        }
-    ],
-    "autoload": {
-        "psr-4": {
-            "DivineOmega\\LaravelOffensiveValidationRule\\": "./src/"
-        }
-    },
-    "autoload-dev": {
-        "psr-4": {
-            "DivineOmega\\LaravelOffensiveValidationRule\\Tests\\": "./tests/"
-        }
+  "name": "jord-jd/laravel-offensive-validation-rule",
+  "description": "Laravel validation rule that checks if a string is offensive.",
+  "type": "library",
+  "require": {
+    "laravel/framework": "^5.5||^6.0||^7.0",
+    "divineomega/is_offensive": "^1.4.0"
+  },
+  "require-dev": {
+    "orchestra/testbench": "^3.5",
+    "phpunit/phpunit": "^6.0",
+    "satooshi/php-coveralls": "^2.0"
+  },
+  "license": "LGPL-3.0-only",
+  "authors": [
+    {
+      "name": "Jordan Hall",
+      "email": "jordan@hall05.co.uk"
     }
+  ],
+  "autoload": {
+    "psr-4": {
+      "DivineOmega\\LaravelOffensiveValidationRule\\": "./src/"
+    }
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "DivineOmega\\LaravelOffensiveValidationRule\\Tests\\": "./tests/"
+    }
+  },
+  "replace": {
+    "jord-jd/laravel-offensive-validation-rule": "self.version"
+  },
+  "extra": {
+    "branch-alias": {
+      "dev-master": "2.0-dev"
+    }
+  }
 }
