--- a/composer.json
+++ b/composer.json
@@ -3,13 +3,12 @@
   "description": "Laravel validation rule that checks if a string is offensive.",
   "type": "library",
   "require": {
-    "laravel/framework": "^5.5||^6.0||^7.0",
-    "divineomega/is_offensive": "^1.4.0"
+    "php": "^7.2 || ^8.0",
+    "illuminate/contracts": "^5.5 || ^6.0 || ^7.0 || ^8.0 || ^9.0 || ^10.0 || ^11.0",
+    "jord-jd/is_offensive": "^4.0"
   },
   "require-dev": {
-    "orchestra/testbench": "^3.5",
-    "phpunit/phpunit": "^6.0",
-    "satooshi/php-coveralls": "^2.0"
+    "phpunit/phpunit": "^9.6"
   },
   "license": "LGPL-3.0-only",
   "authors": [
